--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,13 @@
+anyio==3.7.1
 asgiref==3.4.1
 click==8.0.1
-fastapi==0.65.3
+exceptiongroup==1.1.3
+fastapi==0.103.1
 h11==0.12.0
+idna==3.4
 pydantic==1.8.2
 python-dotenv==0.18.0
-starlette==0.14.2
-typing-extensions==3.10.0.0
+sniffio==1.3.0
+starlette==0.31.1
+typing_extensions==4.8.0
 uvicorn==0.14.0
